<resources>
    <string name="app_name">myFamilyPhotoAlbum</string>
    <string name="splash_screen">Bienvenue</string>
    <string name="firstScreen">My Family photo album</string>
    <string name="signInButton">Sign In</string>
    <string name="signUpButton">Sign Up</string>
    <string name="confirm">Valider</string>
    <string name="newUserButton">Pas encore inscrit</string>
    <string name="UserButton">Déjà inscrit?</string>
    <string name="pwd">Mot de passe</string>
    <string name="pwdConfirm">Confirmer mot de passe</string>
    <string name="eMail">eMail</string>
    <string name="forgotPwdButton">Mot de passe oublié?</string>
    <string name="questionButton">Une question?</string>
    <string name="logIn">Connecte-toi</string>
    <string name="cancel">Annuler</string>
    <string name="ok">Ok</string>
    <string name="album">Album</string>
    <string name="addPicture">Photo</string>
    <string name="addText">Commentaire</string>
    <string name="caption">Légende</string>
    <string name="connection">Go</string>
    <string name="CGU">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="seeYou">A bientôt!</string>
    <string name="confirmEmail">Confirme ton email</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="AKA">Pseudo</string>
    <string name="recoverPwd">Envoi</string>
    <string name="uploadOk">Upload successfull</string>
    <string name="addContent">Ajouter un élément</string>
    <string name="addPictureTitle">Ajouter une photo</string>
    <string name="addTextTitle">Ajouter un commentaire</string>
    <string name="addPic">Photo</string>
    <string name="logOut">Déconnexion</string>
    <string name="profile">Mon profile</string>
    <string name="signUpFailure">createUserWithEmail:failure</string>
    <string name="failure">Raté!</string>
    <string name="closeApp">Fermer</string>
    <string name="logInOk">Connection réussie</string>
    <string name="logInKo">Connection ratée</string>
    <string name="noEmail">Merci de renseigner ton email!</string>
    <string name="noPwd">Indique ton mot de passe</string>
    <string name="incorrectEmail">Adresse mail incorrecte!</string>
    <string name="notMatchingPwd">Les 2 mots de passe doivent concorder</string>
    <string name="noUserName">Donne ton pseudo!</string>
    <string name="contentDesc">Table avec des polaroïds, une tasse de café, une ardoise, un appareil photo</string>
    <string name="cameraNeeded">You need to allow the camera</string>
    <string name="progress_uploading">Chargement en cours</string>
    <string name="upload_success">Chargement réussi</string>
    <string name="upload_failure">Echec du chargement</string>
    <string name="taking_pic_failure">Taking picture failed.</string>
    <string name="progress_auth">récupération utilisateur</string>
    <string name="nothing_to_upload">Rien à télécharger</string>
</resources>
