<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/colorBackground"
    android:orientation="vertical">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_margin="0dp"
            android:src="@mipmap/theme_pic"
            android:contentDescription="@string/contentDesc"/>


    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="5"
    android:orientation="vertical">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textColorHint="@color/colorText"
        android:hint="@string/firstName"
        android:id="@+id/firstName"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/AKA"
        android:id="@+id/userName"
        android:layout_gravity="left"
        android:textColorHint="@color/colorText"
        android:layout_marginLeft="60dp"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/eMail"
        android:id="@+id/eMailSignUp"
        android:textSize="15sp"
        android:textColorHint="@color/colorText"
        android:layout_marginRight="30dp"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:textColorHint="@color/colorText"
        android:hint="@string/pwd"
        android:id="@+id/pwdSignUp"
        android:textSize="15sp"
        android:textAlignment="textEnd"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="10dp"
        android:layout_height="0dp"
        android:inputType="textPassword"
        android:layout_weight="1"
        android:textColorHint="@color/colorText"
        android:hint="@string/pwdConfirm"
        android:id="@+id/pwdConfirm"
        android:textSize="15sp"
        android:textAlignment="textEnd"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/UserButton"
            android:id="@+id/goToSignIn"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:background="@color/colorButton"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/confirm"
            android:id="@+id/confirmSignUp"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
           android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:text="@string/cancel"
            android:id="@+id/cancelSignUp"
            android:layout_marginRight="5dp"
            android:background="@color/colorButton"
            android:layout_marginLeft="5dp"
            android:layout_height="match_parent" />
    </LinearLayout>


</LinearLayout>