<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPwdActivity"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:id="@+id/logInTV"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:text="@string/confirmEmail"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_margin="0dp"
            android:src="@mipmap/theme_pic"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/contentDesc"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/recoveryEMail"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:hint="@string/eMail"
            android:textColorHint="@color/colorText"
            android:textSize="15sp" />
        <Button
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:background="@color/colorButton"
            android:layout_margin="10dp"
            android:text="@string/recoverPwd"
            android:id="@+id/forgotPwd"
            android:layout_width="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:background="@color/colorButton"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/newUser"
            android:text="@string/newUserButton"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:background="@color/colorButton"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/connect"
            android:text="@string/connection"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>