<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".WelcomeActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:textSize="30sp"
            android:text="@string/firstScreen"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_margin="0dip"
            android:src="@mipmap/theme_pic"
            android:contentDescription="@string/contentDesc"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/signIn"
            android:layout_height="match_parent"
            android:text="@string/signInButton"
            android:background="@color/colorButton"
            android:textSize="20sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_margin="20dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/signUp"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="@color/colorButton"
            android:text="@string/signUpButton"/>

    </LinearLayout>

</LinearLayout>